# hermes

./: .gitignore  404.html  AwindaHelper.py  CHANGELOG.md  CONTRIBUTING.md  IMUStreamer.py  LICENSE  LOGO_LICENSE.md  README.md  ReadMe.md  Testing Dot streaming.py  cheatsheet.md  dev_requirements.txt  environment.txt  environment.yml  index.html  main.py  mkdocs.yml  objects.inv  pupil_labs_uvc-1.0.0-cp310-cp310-win_amd64.whl  pyproject.toml  requirements.txt  run.bat  sitemap.xml  tes.py  viz_requirements.txt  xdpchandler.py
.config/: git-changelog.toml
annotation/: README.md  multimodal_annotation.py  sync_utils.py
api/: index.html
architecture/: index.html
docs/: index.md  mkdocs.yml
examples/: dummy.bat  dummy.sh  dummy.yml  dummy_master.yml  dummy_slave.yml  main.py  test.yml  video_codec_amd.yml  video_codec_intel.yml  video_codec_nvidia.yml
firststeps/: index.html
handlers/: BaslerHandler.py  LoggingHandler.py  MovellaHandler.py  PupilFacade.py  TransmissionDelayHandler.py  XsensHandler.py
javascripts/: extra.js
landing/: index.html
launchers/: AidWear_ViconPC.py  AidWear_labPC.py  AidWear_wearablePC.py  template.py
nodes/: Broker.py  Node.py  __init__.py
overrides/: main.html
parsing_data/: ffmpeg_shortcuts.md
recording_data/: LICENSE  ReadMe.md  environment.yml
resources/: MR6450_router_conf.cfg  pylon_20fps_maxres.pfs
search/: search_index.json
sensor_configs/: AidWear.py
streams/: AwindaStream.py  CameraStream.py  CometaStream.py  CyberlegStream.py  DotsStream.py  DummyStream.py  ExperimentControlStream.py  EyeStream.py  (+9 more)
(+452 files in other folders)
